# ServersDockerBot

./: .gitignore  Dockerfile  credentials.json  mail.py  main.py  pyproject.toml  settings.json  start_api.py
api_code/database/: crud.py  database.py  models.py
cogs/: container_commands.py  docker_runner.py  minecraft_loader.py  server_loader.py  upnp_wrapper.py
cogs/container_runner/: container_runner_interface.py
docker_runner/: docker_runner.py  nginx.conf  upnp_wrapper.py
docker_runner/container_runner/: container_runner_interface.py
minecraft_servers/: eula.txt
