[tool.poetry]
name = "serverdockerbot"
version = "0.1.0"
description = ""
authors = ["ACoolName"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.0"
upnpclient = "^1.0.3"
bcrypt = "^4.0.1"
docker = "^6.1.3"
chardet = "^5.1.0"
pydantic = "^2.3.0"
black = "^23.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
