[tool.poetry]
name = "serverdockerbot"
version = "0.1.0"
description = ""
authors = ["ACoolName"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.0"
upnpclient = "^1.0.3"
bcrypt = "^4.0.1"
docker = "^6.1.3"
chardet = "^5.1.0"
pydantic = "^2.3.0"
black = "^23.9.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.20"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
